# PVZTrain

./: .gitignore  BUGFIX_SUMMARY.md  CHANGES_SUMMARY.md  HOOK_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  config.py  main.py  requirements.txt  setup_env.py  test_env.py  一键启动.bat  启动说明.bat
.github/workflows/: build-release.yml
benchmark/: model_benchmark.py
core/: pvz.py
data/: constants.py  offsets.py  plants.py
docs/: DATA_INVENTORY.md
engine/: __init__.py  action.py
examples/: hook_example.py
game/: __init__.py  lawnmower.py  reader.py  state.py
hook/: CMakeLists.txt  README.md  build.bat
hook/src/: bridge.cpp  bridge.h  dllmain.cpp  game.cpp  game.h  state.cpp  state.h
hook_client/: README.md  __init__.py  client.py  injector.py  protocol.py
llm/: client.py  config.py  decoder.py  emergency.py  encoder.py  player.py  predictor.py  prompt.py  reflex.py  validator.py
memory/: injector.py  level_control.py  reader.py  writer.py
tools/: debug_reset.py  reset_level.py  set_level.py  start_training.py  test_plant.py  test_seed_chooser.py  test_seeds.py  unlock_all.py
utils/: logger.py
